--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -32,11 +32,11 @@
     <string name="wifi_not_connected" msgid="8644760246612043851">"Wi-Fi tidak tersambung"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Tidak dapat membaca dokumen"</string>
     <string name="media_size_l" msgid="164416542021598181">"L"</string>
-    <string name="media_size_5x7in" msgid="1275128379533195285">"5x7 inci"</string>
+    <string name="media_size_5x7in" msgid="1275128379533195285">"5x7 inci (12x17 cm)"</string>
     <string name="media_size_89x119mm" msgid="6828167243395807385">"89x119 mm"</string>
     <string name="media_size_54x86mm" msgid="1301991206183343895">"54x86 mm"</string>
-    <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 inci"</string>
-    <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 inci"</string>
+    <string name="media_size_8x10in" msgid="1872576638522812402">"8x10 inci (20x25 cm)"</string>
+    <string name="media_size_4x6in" msgid="3093276425529958253">"4x6 inci (10x15 cm)"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
     <string name="title_activity_add_printer" msgid="3971541707589830268">"Printer Ditambahkan Secara Manual"</string>
     <string name="add_manual_printer" msgid="3990455596246121671">"Tambahkan printer manual"</string>
