--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -31,11 +31,11 @@
     <string name="waiting_to_send" msgid="2022115199902822180">"In attesa di invio"</string>
     <string name="wifi_not_connected" msgid="8644760246612043851">"Nessuna connessione Wi-Fi"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Impossibile leggere il documento"</string>
-    <string name="media_size_l" msgid="164416542021598181">"L"</string>
-    <string name="media_size_5x7in" msgid="1275128379533195285">"5 x 7 in"</string>
+    <string name="media_size_l" msgid="164416542021598181">"9 × 13 cm"</string>
+    <string name="media_size_5x7in" msgid="1275128379533195285">"5 x 7 pollici"</string>
     <string name="media_size_89x119mm" msgid="6828167243395807385">"89 x 119 mm"</string>
     <string name="media_size_54x86mm" msgid="1301991206183343895">"54 x 86 mm"</string>
-    <string name="media_size_8x10in" msgid="1872576638522812402">"8 x 10 in"</string>
+    <string name="media_size_8x10in" msgid="1872576638522812402">"8 x 10 pollici"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"4 x 6 in"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s - %2$s"</string>
     <string name="title_activity_add_printer" msgid="3971541707589830268">"Stampanti aggiunte manualmente"</string>
