--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -17,18 +17,18 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="3551052199033657984">"Standart chop etish xizmati"</string>
+    <string name="app_name" msgid="3551052199033657984">"Birlamchi chop etish xizmati"</string>
     <string name="printer_busy" msgid="8604311528104955859">"Band"</string>
-    <string name="printer_out_of_paper" msgid="4882186432807703877">"Qog‘oz yo‘q"</string>
-    <string name="printer_out_of_ink" msgid="7361897651097675464">"Siyoh qolmagan"</string>
-    <string name="printer_out_of_toner" msgid="2077516357225364154">"Tonerda siyoh yo‘q"</string>
-    <string name="printer_low_on_ink" msgid="3515015872393897705">"Siyoh kam"</string>
-    <string name="printer_low_on_toner" msgid="8807858294038587130">"Tonerda siyoh kam"</string>
-    <string name="printer_door_open" msgid="2446302931916940874">"Qopqog‘i ochiq"</string>
+    <string name="printer_out_of_paper" msgid="4882186432807703877">"Qog‘oz tugagan"</string>
+    <string name="printer_out_of_ink" msgid="7361897651097675464">"Siyoh tugagan"</string>
+    <string name="printer_out_of_toner" msgid="2077516357225364154">"Toner tugagan"</string>
+    <string name="printer_low_on_ink" msgid="3515015872393897705">"Siyoh kam qolgan"</string>
+    <string name="printer_low_on_toner" msgid="8807858294038587130">"Toner kam qolgan"</string>
+    <string name="printer_door_open" msgid="2446302931916940874">"Eshikchasi ochiq"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Tiqilib qolgan"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Oflayn"</string>
     <string name="printer_check" msgid="6428369671197132828">"Printerni tekshirish"</string>
-    <string name="waiting_to_send" msgid="2022115199902822180">"Yuborish kutilmoqda"</string>
+    <string name="waiting_to_send" msgid="2022115199902822180">"Yuborilishi kutilmoqda"</string>
     <string name="wifi_not_connected" msgid="8644760246612043851">"Wi-Fi tarmoqqa ulanmagan"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Hujjatni o‘qib bo‘lmadi"</string>
     <string name="media_size_l" msgid="164416542021598181">"L"</string>
@@ -44,6 +44,6 @@
     <string name="ip_hint" msgid="7939777481941979799">"192.168.0.4"</string>
     <string name="add" msgid="1950342261671100906">"Qo‘shish"</string>
     <string name="no_printer_found" msgid="4777867380924351173">"Bu manzilda printer yo‘q"</string>
-    <string name="printer_not_supported" msgid="281955849350938408">"Printer ishlamaydi"</string>
+    <string name="printer_not_supported" msgid="281955849350938408">"Printer mos emas"</string>
     <string name="forget_printer" msgid="7287993564179837445">"Printerni olib tashlash"</string>
 </resources>
