--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -26,7 +26,7 @@
     <string name="printer_low_on_toner" msgid="8807858294038587130">"ਟੋਨਰ ਘੱਟ ਹੈ"</string>
     <string name="printer_door_open" msgid="2446302931916940874">"ਢੱਕਣ ਖੁੱਲ੍ਹਾ ਹੈ"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"ਜਾਮ ਹੋ ਗਿਆ ਹੈ"</string>
-    <string name="printer_offline" msgid="9196864753298645066">"ਔਫਲਾਈਨ"</string>
+    <string name="printer_offline" msgid="9196864753298645066">"ਆਫ਼ਲਾਈਨ"</string>
     <string name="printer_check" msgid="6428369671197132828">"ਪ੍ਰਿੰਟਰ ਚੈੱਕ ਕਰੋ"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"ਭੇਜਣ ਲਈ ਉਡੀਕ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ"</string>
     <string name="wifi_not_connected" msgid="8644760246612043851">"Wi-Fi ਕਨੈਕਟ ਨਹੀਂ ਹੈ"</string>
