--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -29,7 +29,6 @@
     <string name="printer_offline" msgid="9196864753298645066">"အော့ဖ်လိုင်းဖြစ်နေသည်"</string>
     <string name="printer_check" msgid="6428369671197132828">"ပုံနှိပ်စက်ကို စစ်ဆေးရန်"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"ပို့ရန် စောင့်နေသည်"</string>
-    <string name="wifi_not_connected" msgid="8644760246612043851">"Wi-Fi ချိတ်ဆက်ထားခြင်းမရှိပါ"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"စာရွက်စာတမ်းကို ဖတ်၍မရပါ"</string>
     <string name="media_size_l" msgid="164416542021598181">"ကြီး"</string>
     <string name="media_size_5x7in" msgid="1275128379533195285">"၅x၇ လက်မ"</string>
@@ -38,12 +37,39 @@
     <string name="media_size_8x10in" msgid="1872576638522812402">"၈x၁၀ လက်မ"</string>
     <string name="media_size_4x6in" msgid="3093276425529958253">"၄x၆ လက်မ"</string>
     <string name="printer_description" msgid="8580767673213837142">"%1$s – %2$s"</string>
-    <string name="title_activity_add_printer" msgid="3971541707589830268">"ကိုယ်တိုင်ထည့်သွင်းထားသော ပုံနှိပ်စက်များ"</string>
-    <string name="add_manual_printer" msgid="3990455596246121671">"ကိုယ်တိုင်တပ်ဆင်မည့် ပုံနှိပ်စက်ကို ထည့်ရန်"</string>
+    <!-- no translation found for title_activity_add_printer (9119216095769228566) -->
+    <skip />
+    <!-- no translation found for add_printer_by_ip (562864787592910327) -->
+    <skip />
     <string name="hostname_or_ip" msgid="3460546103553992915">"အင်တာနက်လက်ခံဝန်ဆောင်ပေးသူအမည် သို့မဟုတ် အိုင်ပီလိပ်စာ"</string>
     <string name="ip_hint" msgid="7939777481941979799">"၁၉၂.၁၆၈.၀.၄"</string>
     <string name="add" msgid="1950342261671100906">"ထည့်ရန်"</string>
+    <!-- no translation found for add_named (9074106244018070583) -->
+    <skip />
     <string name="no_printer_found" msgid="4777867380924351173">"ဤလိပ်စာတွင် ပုံနှိပ်စက်တစ်ခုမျှ မတွေ့ပါ"</string>
     <string name="printer_not_supported" msgid="281955849350938408">"ပုံနှိပ်စက်ကို ပံ့ပိုးခြင်းမရှိပါ"</string>
-    <string name="forget_printer" msgid="7287993564179837445">"ပုံနှိပ်စက်ကို ဖြုတ်ရန်"</string>
+    <!-- no translation found for wifi_direct (4629404342852294985) -->
+    <skip />
+    <!-- no translation found for find_wifi_direct (5270504288829123954) -->
+    <skip />
+    <!-- no translation found for wifi_direct_printers (541168032444693191) -->
+    <skip />
+    <!-- no translation found for searching (2114018057619514587) -->
+    <skip />
+    <!-- no translation found for connect_hint_text (587112503851044234) -->
+    <skip />
+    <!-- no translation found for connecting_to (2665161014972086194) -->
+    <skip />
+    <!-- no translation found for failed_printer_connection (4196305972749960362) -->
+    <skip />
+    <!-- no translation found for failed_connection (8068661997318286575) -->
+    <skip />
+    <!-- no translation found for saved_printers (4567534965213125526) -->
+    <skip />
+    <!-- no translation found for forget (892068061425802502) -->
+    <skip />
+    <!-- no translation found for connects_via_wifi_direct (652300632780158437) -->
+    <skip />
+    <!-- no translation found for connects_via_network (5990041581556733898) -->
+    <skip />
 </resources>
