--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -27,6 +27,8 @@
     <string name="printer_door_open" msgid="2446302931916940874">"ドアが開いています"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"詰まっています"</string>
     <string name="printer_offline" msgid="9196864753298645066">"オフラインです"</string>
+    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
+    <skip />
     <string name="printer_check" msgid="6428369671197132828">"プリンタを確認してください"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"送信を待機しています"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"ドキュメントを読み込めませんでした"</string>
@@ -57,4 +59,12 @@
     <string name="forget" msgid="892068061425802502">"削除"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Wi-Fi Direct 経由で接続する"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"現在のネットワーク（<xliff:g id="IP_ADDRESS">%1$s</xliff:g>）経由で接続する"</string>
+    <!-- no translation found for security (2279008326210305401) -->
+    <skip />
+    <!-- no translation found for certificate_update_request (1314796413107139475) -->
+    <skip />
+    <!-- no translation found for accept (4426153292469698134) -->
+    <skip />
+    <!-- no translation found for reject (24751635160440693) -->
+    <skip />
 </resources>
