--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -27,6 +27,8 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Atidarytos durelės"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Užstrigęs"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Neprisijungęs"</string>
+    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
+    <skip />
     <string name="printer_check" msgid="6428369671197132828">"Tikrinti spausdintuvą"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Laukiama, kol bus išsiųsta"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Nepavyko nuskaityti dokumento"</string>
@@ -57,4 +59,12 @@
     <string name="forget" msgid="892068061425802502">"Pamiršti"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Užmezgamas ryšys per „Wi-Fi Direct“"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Užmezgamas ryšys per dabartinį tinklą adresu <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
+    <!-- no translation found for security (2279008326210305401) -->
+    <skip />
+    <!-- no translation found for certificate_update_request (1314796413107139475) -->
+    <skip />
+    <!-- no translation found for accept (4426153292469698134) -->
+    <skip />
+    <!-- no translation found for reject (24751635160440693) -->
+    <skip />
 </resources>
