--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -27,6 +27,8 @@
     <string name="printer_door_open" msgid="2446302931916940874">"Отворена врата"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"Заглавен"</string>
     <string name="printer_offline" msgid="9196864753298645066">"Офлајн"</string>
+    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
+    <skip />
     <string name="printer_check" msgid="6428369671197132828">"Проверете го печатачот"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Се чека за испраќање"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Не може да се прочита документот"</string>
@@ -57,4 +59,12 @@
     <string name="forget" msgid="892068061425802502">"Избриши го"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Се поврзува преку Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Се поврзува преку моменталната мрежа на <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
+    <!-- no translation found for security (2279008326210305401) -->
+    <skip />
+    <!-- no translation found for certificate_update_request (1314796413107139475) -->
+    <skip />
+    <!-- no translation found for accept (4426153292469698134) -->
+    <skip />
+    <!-- no translation found for reject (24751635160440693) -->
+    <skip />
 </resources>
