--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -27,6 +27,8 @@
     <string name="printer_door_open" msgid="2446302931916940874">"机盖未关"</string>
     <string name="printer_jammed" msgid="5104099859384749499">"卡纸"</string>
     <string name="printer_offline" msgid="9196864753298645066">"离线"</string>
+    <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
+    <skip />
     <string name="printer_check" msgid="6428369671197132828">"检查打印机"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"正在等待发送"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"无法读取文档"</string>
@@ -57,4 +59,12 @@
     <string name="forget" msgid="892068061425802502">"忽略"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"通过 WLAN 直连连接"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"在 <xliff:g id="IP_ADDRESS">%1$s</xliff:g> 通过当前网络连接"</string>
+    <!-- no translation found for security (2279008326210305401) -->
+    <skip />
+    <!-- no translation found for certificate_update_request (1314796413107139475) -->
+    <skip />
+    <!-- no translation found for accept (4426153292469698134) -->
+    <skip />
+    <!-- no translation found for reject (24751635160440693) -->
+    <skip />
 </resources>
