--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -29,8 +29,7 @@
     <string name="printer_offline" msgid="9196864753298645066">"Võrguühenduseta"</string>
     <!-- no translation found for printer_bad_certificate (1366180387095466268) -->
     <skip />
-    <!-- no translation found for printer_not_encrypted (1913051469275483673) -->
-    <skip />
+    <string name="printer_not_encrypted" msgid="1913051469275483673">"Pole krüpteeritud"</string>
     <string name="printer_check" msgid="6428369671197132828">"Printeri kontrollimine"</string>
     <string name="waiting_to_send" msgid="2022115199902822180">"Saatmise ootel"</string>
     <string name="unreadable_input" msgid="2199948329556527912">"Dokumenti ei õnnestunud lugeda"</string>
@@ -65,8 +64,7 @@
     <skip />
     <!-- no translation found for certificate_update_request (1314796413107139475) -->
     <skip />
-    <!-- no translation found for not_encrypted_request (4871472176807381642) -->
-    <skip />
+    <string name="not_encrypted_request" msgid="4871472176807381642">"See printer ei aktsepteeri enam krüpteeritud töid. Kas jätkata printimist?"</string>
     <!-- no translation found for accept (4426153292469698134) -->
     <skip />
     <!-- no translation found for reject (24751635160440693) -->
