--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -60,6 +60,11 @@
     <string name="forget" msgid="892068061425802502">"Odstranit"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Připojení prostřednictvím Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Připojení prostřednictvím stávající sítě s IP adresou <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
+    <string name="recommendation_summary" msgid="2979700524954307566">"Výchozí služba tisku nabízí základní možnosti. Další možnosti mohou být k dispozici z jiné služby tisku."</string>
+    <string name="recommendations_heading" msgid="5086762263560605249">"Doporučené služby"</string>
+    <string name="recommendation_install_summary" msgid="374785283809791669">"Vyberte, co nainstalovat"</string>
+    <string name="recommendation_enable_summary" msgid="3500907868251326224">"Vyberte, co aktivovat"</string>
+    <string name="recommendation_manage" msgid="4683640588502866284">"Spravovat služby"</string>
     <string name="security" msgid="2279008326210305401">"Zabezpečení"</string>
     <string name="certificate_update_request" msgid="1314796413107139475">"Tato tiskárna poskytla nový bezpečnostní certifikát, nebo se za ni vydává jiné zařízení. Chcete nový certifikát přijmout?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Tato tiskárna už nepřijímá šifrované tiskové úlohy. Pokračovat v tisku?"</string>
