--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -60,6 +60,11 @@
     <string name="forget" msgid="892068061425802502">"Glem"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"Opretter forbindelse via Wi-Fi Direct"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"Opretter forbindelse via netværk med adressen <xliff:g id="IP_ADDRESS">%1$s</xliff:g>"</string>
+    <string name="recommendation_summary" msgid="2979700524954307566">"Tjenesten Standardudskrivning giver dig grundlæggende valgmuligheder. Du kan muligvis få adgang til andre muligheder for denne printer via en anden udskrivningstjeneste."</string>
+    <string name="recommendations_heading" msgid="5086762263560605249">"Anbefalede tjenester"</string>
+    <string name="recommendation_install_summary" msgid="374785283809791669">"Vælg for at installere"</string>
+    <string name="recommendation_enable_summary" msgid="3500907868251326224">"Vælg for at aktivere"</string>
+    <string name="recommendation_manage" msgid="4683640588502866284">"Administrer tjenester"</string>
     <string name="security" msgid="2279008326210305401">"Sikkerhed"</string>
     <string name="certificate_update_request" msgid="1314796413107139475">"Denne printer angav et nyt sikkerhedscertifikat, eller en anden enhed efterligner den. Vil du acceptere det nye certifikat?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"Denne printer understøtter ikke længere krypterede jobs. Vil du fortsætte med at udskrive?"</string>
