--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -60,6 +60,11 @@
     <string name="forget" msgid="892068061425802502">"विसरा"</string>
     <string name="connects_via_wifi_direct" msgid="652300632780158437">"वाय-फाय थेट मार्फत कनेक्ट होते"</string>
     <string name="connects_via_network" msgid="5990041581556733898">"<xliff:g id="IP_ADDRESS">%1$s</xliff:g> वर सध्याच्या नेटवर्कमार्फत कनेक्ट होते"</string>
+    <string name="recommendation_summary" msgid="2979700524954307566">"डीफॉल्ट प्रिंट सेवा पुरवठादार मूलभूत पर्याय देतात. या प्रिंटरचे इतर पर्याय कदाचित दुसऱ्या एखाद्या प्रिंट सेवेसाठी उपलब्ध असतील."</string>
+    <string name="recommendations_heading" msgid="5086762263560605249">"शिफारस केलेल्या सेवा"</string>
+    <string name="recommendation_install_summary" msgid="374785283809791669">"इंस्टॉल करण्यासाठी निवडा"</string>
+    <string name="recommendation_enable_summary" msgid="3500907868251326224">"सुरू करण्यासाठी निवडा"</string>
+    <string name="recommendation_manage" msgid="4683640588502866284">"सेवा व्यवस्थापित करा"</string>
     <string name="security" msgid="2279008326210305401">"सुरक्षितता"</string>
     <string name="certificate_update_request" msgid="1314796413107139475">"हा प्रिंटर नवीन सुरक्षा सर्टिफिकेट प्रदान करतो किंवा दुसरे एखादे डिव्हाइस तोतयागिरी करत असेल. नवीन सर्टिफिकेट स्वीकारायचे का?"</string>
     <string name="not_encrypted_request" msgid="4871472176807381642">"यापुढे हा प्रिंटर एंक्रिप्ट केलेली कामे स्वीकारणार नाही. प्रिंट करणे सुरू ठेवायचे आहे का?"</string>
